[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gromp"
version = "0.3.0"
authors = [
    { name="Wilhelm Ågren", email="wilhelmagren98@gmail.com" },
]
description = "Holistic python wrapper for the public Riot Games developer API, written in Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/willeagren/gromp"

[tool.setuptools]
packages = ["gromp"]
