[tool.poetry]
name = "gromp"
version = "1.1.0"
description = "Holistic Python implementation of the public Riot Games Developer API."
authors = [
    "Wilhelm Ågren <wilhelmagren98@gmail.com>",
]
license = "MIT"
readme = "README.md"

packages = [{ include = "gromp" }]
homepage = "https://github.com/wilhelmagren/gromp"
repository = "https://github.com/wilhelmagren/gromp"
keywords = [
    "python",
    "api",
    "league-of-legends",
    "discord-bot",
    "api-wrapper",
    "riot-games",
    "riot",
    "riot-games-api",
    "teamfight-tactics",
    "legends-of-runeterra",
    "valorant",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/wilhelmagren/gromp"
"Bug tracker" = "https://github.com/wilhelmagren/gromp/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
requests = "^2.31.0"
rsa = "^4.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = ">=7.4.3,<9.0.0"
ruff = ">=0.1.4,<0.3.0"
pre-commit = "^3.5.0"
pyclean = "^2.7.5"
pytest-cov = "^4.1.0"


[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 89
ignore = [
    "E401",  # unused imports
]

[tool.black]
target-version = [ "py310" ]
line-length = 89
